--- a/gamp.glade
+++ b/gamp.glade
@@ -611,14 +611,14 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkButton" id="button_load">
+	    <widget class="GtkButton" id="button_open">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="label" translatable="yes">Load</property>
 	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <signal name="clicked" handler="on_button_load_clicked" last_modification_time="Thu, 30 Oct 2003 01:53:58 GMT"/>
+	      <signal name="clicked" handler="on_button_open_clicked" last_modification_time="Thu, 30 Oct 2003 01:53:58 GMT"/>
 	    </widget>
 	  </child>
 
