--- a/data/gamp.glade
+++ b/data/gamp.glade
@@ -12,7 +12,7 @@
   <property name="modal">False</property>
   <property name="default_width">100</property>
   <property name="default_height">100</property>
-  <property name="resizable">False</property>
+  <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <property name="icon">gamp.png</property>
   <property name="decorated">True</property>
@@ -246,14 +246,14 @@
 		<packing>
 		  <property name="padding">0</property>
 		  <property name="expand">True</property>
-		  <property name="fill">True</property>
+		  <property name="fill">False</property>
 		</packing>
 	      </child>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
-	      <property name="expand">True</property>
-	      <property name="fill">True</property>
+	      <property name="expand">False</property>
+	      <property name="fill">False</property>
 	    </packing>
 	  </child>
 
@@ -281,7 +281,7 @@
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
-	      <property name="expand">True</property>
+	      <property name="expand">False</property>
 	      <property name="fill">True</property>
 	    </packing>
 	  </child>
@@ -314,7 +314,7 @@
 		      <signal name="clicked" handler="on_button_previous_clicked" last_modification_time="Fri, 10 Oct 2003 17:37:51 GMT"/>
 
 		      <child>
-			<widget class="GtkImage" id="image7">
+			<widget class="GtkImage" id="image27">
 			  <property name="visible">True</property>
 			  <property name="pixbuf">pixmaps/gamp-previous.png</property>
 			  <property name="xalign">0.5</property>
@@ -521,7 +521,7 @@
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
-	      <property name="expand">True</property>
+	      <property name="expand">False</property>
 	      <property name="fill">True</property>
 	    </packing>
 	  </child>
@@ -620,8 +620,8 @@
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
-		      <property name="expand">True</property>
-		      <property name="fill">True</property>
+		      <property name="expand">False</property>
+		      <property name="fill">False</property>
 		    </packing>
 		  </child>
 		</widget>
